# openmp_test

./: CMakeLists.txt  openmptest.c  q2.c  test.c
